package IPL_MANAGER;

public enum MatchFormat{
    IPL,
    T20,
    ODI,
}
